unpackaged/main/default/objects/asp04__Asperato_Settings__mdt/asp04__Asperato_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Asperato Settings</label>
    <pluralLabel>Asperato Settings</pluralLabel>
</CustomObject>