unpackaged/main/default/objects/asp04__Asperato_Settings__mdt/fields/asp04__Direct_Debit_Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>asp04__Direct_Debit_Lead_Time__c</fullName>
    <inlineHelpText>How many days in advance of the payment date should a direct debit payment be requested?</inlineHelpText>
    <label>Default Direct Debit Lead Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>