unpackaged/main/default/objects/asp04__Asperato_Settings__mdt/fields/asp04__Paypage_endpoint__c.field-meta.xml
<CustomField>
    <fullName>asp04__Paypage_endpoint__c</fullName>
    <defaultValue>&quot;/PMWeb1&quot;</defaultValue>
    <label>Paypage endpoint</label>
    <length>100</length>
    <type>Text</type>
</CustomField>