unpackaged/main/default/objects/asp04__Asperato_Settings__mdt/fields/asp04__Repeat_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>asp04__Repeat_Endpoint__c</fullName>
    <defaultValue>&quot;/PMRepeatJson&quot;</defaultValue>
    <label>Repeat Endpoint</label>
    <length>100</length>
    <type>Text</type>
</CustomField>