unpackaged/main/default/objects/asp04__Asperato_Settings__mdt/fields/asp04__Test_Server__c.field-meta.xml
<CustomField>
    <fullName>asp04__Test_Server__c</fullName>
    <defaultValue>&quot;https://test.protectedpayments.net&quot;</defaultValue>
    <label>Test Server</label>
    <length>100</length>
    <type>Text</type>
</CustomField>